--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     />
     <link rel="shortcut icon" href="imagenes/favicon.jpg" />
 
-    <title>React App</title>
+    <title>D&N</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
